# VoiceAI-Support-Dashboard

./: .env.example  .gitignore  .pre-commit-config.yaml  BLACK_VAULT_V12_REPORT.md  BLACK_VAULT_V13_REPORT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  eslint.config.mjs  main.py  next.config.js  package-lock.json  package.json  playwright.config.ts  proxy.ts  sbom.json  stryker.config.mjs  vitest.config.ts
.black-vault/: ArtifactsLedger.json  ComplianceLedger.json  CostLedger.json  DecisionLog.json  FindingsRegister.json  Inventory.tsv  MetricsLedger.json  README.md  RiskRegister.json  ScanLedger.json
.github/: dependabot.yml  pull_request_template.md
agents/: __init__.py  live_agent.py  storyteller.py  ui_navigator.py
app/: globals.css  (+1 more)
nexus-live-backend/: .gitignore  Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
nexus-live-backend/agents/: live_agent.py  storyteller.py  ui_navigator.py
nexus-live-backend/deploy/: cloudrun-deploy.sh
nexus-live-backend/deploy/terraform/: outputs.tf
nexus-live-backend/frontend/: index.html
nexus-live-backend/frontend/static/css/: main.css
nexus-live-backend/frontend/static/js/: app.js
nexus-live-backend/middleware/: __init__.py  security.py
nexus-live-backend/models/: __init__.py
nexus-live-backend/schemas/: __init__.py  analysis.py  session.py
nexus-live-backend/services/: __init__.py  code_analyzer.py  fix_generator.py  vulnerability_scanner.py
nexus-live-backend/tests/integration/: test_live_session.py
nexus-live-backend/tests/unit/: test_api.py  test_code_analyzer.py
(+127 files in other folders)
